--- a/raykartApp/.classpath
+++ b/raykartApp/.classpath
@@ -46,5 +46,23 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/persistence-api-1.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/yasson-1.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAX-RS-Jersey-API">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+			<attribute name="owner.project.facets" value="jst.jaxrs"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/tools/selenium/client-combined-3.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/tools/selenium/client-combined-3.11.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/tools/selenium/libs/byte-buddy-1.7.9.jar"/>
+	<classpathentry kind="lib" path="C:/tools/selenium/libs/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="C:/tools/selenium/libs/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/tools/selenium/libs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/tools/selenium/libs/gson-2.8.2.jar"/>
+	<classpathentry kind="lib" path="C:/tools/selenium/libs/guava-23.6-jre.jar"/>
+	<classpathentry kind="lib" path="C:/tools/selenium/libs/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/tools/selenium/libs/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="C:/tools/selenium/libs/okhttp-3.9.1.jar"/>
+	<classpathentry kind="lib" path="C:/tools/selenium/libs/okio-1.13.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
