--- a/raykartApp/.classpath
+++ b/raykartApp/.classpath
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_161">
+	<classpathentry kind="src" output="target/classes" path="src">
 		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="test">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
@@ -12,8 +22,6 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/aopalliance-repackaged-2.5.0-b42.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/cdi-api-1.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/el-api-2.2.jar"/>
@@ -52,17 +60,11 @@
 			<attribute name="owner.project.facets" value="jst.jaxrs"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/tools/selenium/client-combined-3.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/tools/selenium/client-combined-3.11.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/tools/selenium/libs/byte-buddy-1.7.9.jar"/>
-	<classpathentry kind="lib" path="C:/tools/selenium/libs/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="C:/tools/selenium/libs/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/tools/selenium/libs/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/tools/selenium/libs/gson-2.8.2.jar"/>
-	<classpathentry kind="lib" path="C:/tools/selenium/libs/guava-23.6-jre.jar"/>
-	<classpathentry kind="lib" path="C:/tools/selenium/libs/httpclient-4.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/tools/selenium/libs/httpcore-4.4.6.jar"/>
-	<classpathentry kind="lib" path="C:/tools/selenium/libs/okhttp-3.9.1.jar"/>
-	<classpathentry kind="lib" path="C:/tools/selenium/libs/okio-1.13.0.jar"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
